Bug 249858 - Inconsistent naming of application
Summary: Inconsistent naming of application
Status: CLOSED FIXED
Alias: None
Product: KJots Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Maemo 5 Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-02 11:15 UTC by Felix Wolfsteller
Modified: 2010-10-13 16:42 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Felix Wolfsteller 2010-09-02 11:15:53 UTC
While the menu item shows KDE Notes, the binary and package is called notes-mobile and the window title is KJots.

More consistent naming would be prefered (e.g. at least "KDE Notes" in the window title).
Comment 1 Felix Wolfsteller 2010-10-05 12:03:48 UTC
Persists in 4:4.5~20101001.1181693-1maemo4.1181469 .
Comment 2 Volker Krause 2010-10-08 12:02:48 UTC
SVN commit 1183753 by vkrause:

Use window titles consistent with applications names in the .desktop files.

BUG: 249858


 M  +4 -1      calendar/mainview.cpp  
 M  +2 -0      contacts/contacteditorview.cpp  
 M  +2 -0      contacts/contactgroupeditorview.cpp  
 M  +1 -1      contacts/mainview.cpp  
 M  +2 -0      mail/composerview.cpp  
 M  +1 -1      mail/mainview.cpp  
 M  +1 -1      notes/mainview.cpp  
 M  +4 -1      tasks/mainview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1183753
Comment 3 Felix Wolfsteller 2010-10-13 16:42:40 UTC
Confirmed, version 4:4.5~20101013.1185418-1maemo1.1185177 .