Use window titles consistent with applications names in the .desktop files.

BUG: 249858

svn path=/trunk/KDE/kdepim/mobile/; revision=1183753